# tiny-torch

./: .gitignore  README.md  __init__.py  example_outline.md  main.py  pyproject.toml  scratchpad.py
autograd/: __init__.py  engine.py
data/: __init__.py  mnist.py
examples/: autoencoder.py  mnist_conv.py  mnist_conv_keras_benchmark.py  mnist_mlp.py
nn/: __init__.py  functional.py  modules.py
optim/: __init__.py  adam.py  sgd.py
reporters/: __init__.py  wandb_reporter.py
tests/: test_value.py
tests/nn/: functional.tests.py  test_functional.py
