[project]
name = "tiny-micro-torch"
version = "0.1.0"
description = "A minimal, educational automatic differentiation engine and neural network library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "tensorflow>=2.15.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    "wandb>=0.23.0",
]

[tool.setuptools]
packages = ["autograd", "nn", "optim", "data", "reporters"]
